<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Card View -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!-- Article image -->
        <ImageView
            android:id="@+id/iv_article"
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:contentDescription="@string/article_photo"
            android:scaleType="fitXY"
            tools:srcCompat="@drawable/sample" />

        <ImageView
            android:id="@+id/iv_no_image"
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:contentDescription="@string/no_photo"
            android:visibility="gone"
            tools:srcCompat="@drawable/sample" />


    </androidx.cardview.widget.CardView>


    <!-- Title -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_view"
        app:layout_constraintTop_toTopOf="@+id/card_view"
        tools:text="Biden news - live: ‘Act now’ on Covid relief, says president as Marjorie Taylor Greene refuses to step down - The Independent" />


    <!-- Date -->
    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/tv_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:text="Jan 09, 2021" />

    <!-- Delete Button -->

    <TextView
        android:id="@+id/tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/saved_on"
        app:layout_constraintStart_toEndOf="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <ImageButton
        android:id="@+id/ib_delete"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ib_share"
        app:layout_constraintTop_toTopOf="@+id/ib_share"
        app:srcCompat="@drawable/ic_baseline_delete_forever" />

    <!-- Share Button -->
    <ImageButton
        android:id="@+id/ib_share"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/share_article"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_share" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="16dp"
        android:background="@color/grayLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view" />


</androidx.constraintlayout.widget.ConstraintLayout>